# gfx-playground

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
src/: app.cpp  app.h  main.cpp  utils.cpp  utils.h
src/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
src/canvas/: 01_hello_triangle copy.h  01_hello_triangle.cpp  01_hello_triangle.h  02_draw_commands.cpp  02_draw_commands.h  03_dsa_buffers.cpp  03_dsa_buffers.h  04_mesh_editor.cpp  04_mesh_editor.h  05_texture_compression.cpp  05_texture_compression.h  06_rex_triangle.h  canvas.h  example_canvas.cpp  example_canvas.h  main_canvas.cpp  main_canvas.h
src/gl/: framework.cpp  framework.h
src/ui/: modes.cpp  modes.h
tests/: frame_rate_test.cpp
